# basedBench

./: .env.example  .gitignore  .secrets.baseline  AGENTS.md  HANDOFF.md  LICENSE  PLAN.md  README.md  app.py  pyproject.toml
docs/: architecture.md  basedbench-launch.md  release-readiness.md
scripts/: release_audit.py
space/: README.md  __init__.py  app.py  data.py  requirements.txt
src/basedbench/: __init__.py  __main__.py  app.py  cli.py  config.py  errors.py  model_policy.py  schemas.py
src/basedbench/db/: __init__.py  connection.py  migrations.py  queries.py
src/basedbench/llm/: _retry.py  anthropic.py  consensus.py  judge.py  meta.py  openai.py  openrouter.py  prompts.py  provider.py  quality_gate.py  record.py  safety_gate.py
src/basedbench/pipeline/: _progress.py  consensus_eval.py  duplicates.py  export.py  hf_push.py  ingest.py  judge.py  predict.py  snapshot.py  tracer.py
src/basedbench/reddit/: client.py  images.py  pullpush.py
tests/: conftest.py  test_app_helpers.py  test_consensus.py  test_db.py  test_duplicates.py  test_errors.py  test_export.py  test_image_prompts.py  test_ingest_concurrency.py  test_judge.py  test_model_policy.py  test_multi_judge.py  test_persistence.py  test_predictor_isolation.py  test_prompts.py  test_pullpush.py  test_reddit.py  test_safety_gate.py  test_schemas.py  test_space_data.py  test_tracer.py
