[project]
name = "basedbench"
version = "5.0.0"
description = "Benchmark VLMs on meme understanding"
readme = "README.md"
authors = [
    { name = "Alex Anthony", email = "alex.orion.anthony@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "openai>=1.0",
    "anthropic>=0.39",
    "tenacity>=9.0",
    "gradio>=5.0",
    "datasets>=3.0",
    "huggingface-hub>=0.25",
    "Pillow>=10.0",
    "tqdm>=4.0",
]

[project.scripts]
basedbench = "basedbench.cli:app"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
