[project]
name = "basedbench"
version = "5.0.0"
description = "Benchmark VLMs on meme understanding"
readme = "README.md"
authors = [
    { name = "Alex Anthony", email = "alex.orion.anthony@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "openai>=1.0",
    "anthropic>=0.39",
    "tenacity>=9.0",
    "gradio>=5.0",
    "datasets>=3.0",
    "huggingface-hub>=0.25",
    "Pillow>=10.0",
    "tqdm>=4.0",
    "aiohttp>=3.14.0",
    "idna>=3.15",
    "python-multipart>=0.0.27",
    "urllib3>=2.7.0",
    "starlette>=1.0.1",
]

[project.scripts]
basedbench = "basedbench.cli:app"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "detect-secrets>=1.5.0",
    "pip-audit>=2.10.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
]
